--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "test": "vitest",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
+    "framer-motion": "^11.0.5",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
